--- a/vlan.yml
+++ b/vlan.yml
@@ -1,11 +1,17 @@
 ---
 - name: tao vlan
-  hosts: all
+  host: all
   gather_facts: no
 
   tasks:
     - name: Create vlan
       ios_vlan:
-        vlan_id: 100
+        vlan_id: {{item}}
         name: test-vlan
         state: present
+      loop:
+        -10
+        -11
+        -12
+        -13
+        -14
