--- a/vlan.yml
+++ b/vlan.yml
@@ -7,11 +7,11 @@
     - name: Create vlan
       ios_vlan:
         vlan_id: "{{ item }}"
-        name: "{{ item }}"
+        name: "{{ item.regex }}"
         state: present
       with_items:
-        - vlan11
-        - 12
+        - "11", regex: "p1"
+        - "12", regex: "p2"
         - 13
         - 14
         - "15"
