--- a/vlan.yml
+++ b/vlan.yml
@@ -10,8 +10,5 @@
         name: "{{ item.regex }}"
         state: present
       with_items:
-        - number: "11", regex: "phong 1"
-        - number: "12", regex: "p1"
-        - 13
-        - 14
-        - "15"
+        - { number: "21", regex: "phong 1" }
+        - { number: "22", regex: "p1" }
