--- a/vlan.yml
+++ b/vlan.yml
@@ -15,7 +15,8 @@
         - { number: "34", regex: "phong_ke_toan" }
     - name: Show vlan
       ios_command:
-        commnads: show vlan brief
+        commands:
+          - show vlan brief
       register: show_vlan
 
     - debug: var=show_vlan.stdout_lines
