--- a/router.yml
+++ b/router.yml
@@ -7,6 +7,12 @@
       ios_l3_interface:
         name: loopback 2
         ipv4: 10.0.0.1/24
+        
+    - name: Set GigabitEthernet0/3 IPv4 address
+      ios_l3_interface:
+        name: GigabitEthernet0/3
+        ipv4: 192.168.0.1/24
+    
     - name: Show ip
       ios_command:
         commands:
