--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -11,13 +11,13 @@
     - name: dat ip subinterface
       ios_config:
         lines:
-          -encapsulation dot1Q {{item.vlan}}
-          -ip address 192.168.{{item.vlan}}.1 255.255.255.0
-        parents: {{item.subint}}
+          -encapsulation dot1Q "{{item.vlan}}"
+          -ip address 192.168."{{item.vlan}}".1 255.255.255.0
+        parents: "{{item.subint}}"
       with_items:
-        - { subint: fastEthernet0/1.10 , vlan: 10 }
-        - { subint: fastEthernet0/1.20 , vlan: 20 }
-        - { subint: fastEthernet0/1.30 , vlan: 30 }
+        - { subint: "fastEthernet0/1.10" , vlan: "10" }
+        - { subint: "fastEthernet0/1.20" , vlan: "20" }
+        - { subint: "fastEthernet0/1.30" , vlan: "30" }
 
     - name: Show ip
       ios_command:
@@ -34,7 +34,7 @@
     - name: tao vlan
       ios_config:
         lines:
-          -vlan {{item}}
+          -vlan "{{item}}"
           -exit
       with_items:
         - 10
@@ -45,13 +45,13 @@
       ios_config:
         lines:
           - switchport mode access
-          - switch access vlan {{item.vlan}}
+          - switch access vlan "{{item.vlan}}"
           - exit
-        parents: {{item.int}}
+        parents: "{{item.int}}"
       with_items:
-        - { vlan: 10, int: fastEthernet0/1}
-        - { vlan: 20, int: fastEthernet0/2}
-        - { vlan: 30, int: fastEthernet0/3}
+        - { vlan: "10", int: "fastEthernet0/1"}
+        - { vlan: "20", int: "fastEthernet0/2"}
+        - { vlan: "30", int: "fastEthernet0/3"}
 
     - name: trunking tren switch
       ios_config:
@@ -59,3 +59,4 @@
           - switchport trunk encapsulation dot1Q
           - switchport mode trunk
       parents: fastEthernet0/0
+
