--- a/vlan.yml
+++ b/vlan.yml
@@ -1,6 +1,6 @@
 ---
-- name: tao vlan 
-  hosts: all # tên của thiết bị trong Ansible server( vì ở đây chỉ có router nên có thể để all) 
+- name: tao vlan
+  hosts: all # tên của thiết bị trong Ansible server( vì ở đây chỉ có router nên có thể để all)
   gather_facts: no # lấy thông tin của host (khi thực hiện playbook sẽ tự động lấy thông tin của host,
   #ở đây chọn no hoặc false để khi chạy playbook đỡ tốn thời gian)
 
@@ -13,11 +13,12 @@
       with_items:
         - { number: "33", name: "phong_nhan_su" }
         - { number: "34", name: "phong_ke_toan" }
-    #Hiển thị các vlan lên màn hình    
+    #Hiển thị các vlan lên màn hình
     - name: Show vlan
       ios_command: # Cú pháp để viết lệnh để gửi ở mode command line của switch
         commands:
           - show vlan brief
       register: show_vlan #gắn kết quả thực thi từ switch vào biến show_vlan
 
-    - debug: var=show_vlan.stdout_lines #debug: in ra màn hình, đặt biến var(lấy thông tin của các dòng từ show_vlan gắn vào),in biến var 
+    - debug: var=show_vlan.stdout_lines #debug: in ra màn hình, đặt biến var(lấy thông tin của các dòng từ show_vlan gắn vào),in biến var
+#test 123
