--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -24,6 +24,8 @@
       ios_l2_interface:
         name: fastEthernet3/0/14
         mode: trunk
+        native_vlan: 1
+        encapsulation: dot1Q
         trunk_allowed_vlans:
           - 10
           - 20
