--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -22,15 +22,12 @@
 
     - name: trunking tren switch
       ios_l2_interface:
-        name: fastEthernet3/0/14
-        mode: trunk
-        native_vlan: 1
-        encapsulation: dot1Q
-        trunk_allowed_vlans:
-          - 10
-          - 20
-          - 30
-
+        config:
+          - name: fastEthernet3/0/14
+            trunk:
+              allowed_vlan: 10,20
+              encapsulation: dot1Q
+                  
 - name: Cau hinh tren router
   hosts: Router
   gather_facts: no
