--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -22,9 +22,9 @@
 
     - name: trunking tren switch
       ios_l2_interface:
-        - name: fastEthernet3/0/14
-          mode: trunking
-          trunk_vlans: 10,20
+        name: fastEthernet3/0/14
+        mode: trunk
+        trunk_vlans: "10,20"
 
 - name: Cau hinh tren router
   hosts: Router
