--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -24,7 +24,8 @@
       ios_l2_interface:
         name: fastEthernet3/0/14
         mode: trunk
-        trunk_vlans: "10,20"
+        native_vlan: 1
+        trunk_vlans: 10-30
 
 - name: Cau hinh tren router
   hosts: Router
