--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -1,7 +1,7 @@
 ---
 - name: Cau hinh tren Switch
   hosts: Switch
-#  gather_facts: no
+  gather_facts: no
 
   tasks:
     - name: tao vlan
@@ -20,10 +20,12 @@
         - { vlan: "20", int: "fastEthernet3/0/3"}
         - { vlan: "30", int: "fastEthernet3/0/4"}
 
-    - name: trunking tren switch
+    - name: Ensure GigabitEthernet0/5 is a trunk port and ensure 2-50 are being tagged (doesn't mean others aren't also being tagged)
       ios_l2_interface:
         name: fastEthernet3/0/14
         mode: trunk
+        native_vlan: 1
+        trunk_vlans: 2-30
 
 - name: Cau hinh tren router
   hosts: Router
