--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -19,13 +19,11 @@
         - { vlan: "10", int: "fastEthernet3/0/2"}
         - { vlan: "20", int: "fastEthernet3/0/3"}
         - { vlan: "30", int: "fastEthernet3/0/4"}
-    - name: Ensure GigabitEthernet0/5 is a trunk port and ensure 2-50 are being tagged (doesn't mean others aren't also being tagged)
-      ios_l2_interface:
-        name: fastEthernet3/0/14
-        mode: trunk
-        native_vlan: 1
-        trunk_vlans: 2-30
-
+    - name: trunk port
+      trunk_ports:
+        - { group: 1, ports: ['fastEthernet3/0/14']}
+      allowed_vlans: 2-50
+      
 - name: Cau hinh tren router
   hosts: Router
   gather_facts: no
