--- a/trunkGiuaSwitchVaRouter.yml
+++ b/trunkGiuaSwitchVaRouter.yml
@@ -41,9 +41,10 @@
     - name: dat ip subinterface
       ios_config:
         lines:
-          -encapsulation dot1Q {{item.vlan}}
-          -ip address 192.168.{{item.vlan}}.1 255.255.255.0
-        parents: "{{item.subint}}"
+          - encapsulation dot1Q {{item.vlan}}
+          - ip address 192.168.{{item.vlan}}.1 255.255.255.0
+        parents:
+          - "{{item.subint}}"
       with_items:
         - { subint: fastEthernet0/1.10 , vlan: 10 }
         - { subint: fastEthernet0/1.20 , vlan: 20 }
