--- a/lien_ket_file.yml
+++ b/lien_ket_file.yml
@@ -1,6 +1,6 @@
 ---
 - name: Lien ket voi file example_vars.yml
-  host: all
+  hosts: all
   gather_facts: false
   vars_file:
     - example_vars.yml
