--- a/vlan.yml
+++ b/vlan.yml
@@ -1,6 +1,6 @@
 ---
 - name: tao vlan
-  hosts: all # tên của thiết bị trong Ansible server( vì ở đây chỉ có router nên có thể để all)
+  hosts: SW # tên của thiết bị trong Ansible server( vì ở đây chỉ có router nên có thể để all)
   gather_facts: no # lấy thông tin của host (khi thực hiện playbook sẽ tự động lấy thông tin của host,
   #ở đây chọn no hoặc false để khi chạy playbook đỡ tốn thời gian)
 
@@ -13,6 +13,7 @@
       with_items:
         - { number: "33", name: "phong_nhan_su" }
         - { number: "34", name: "phong_ke_toan" }
+        - { number: "35", name: "phong_kinh_doanh" }
     #Hiển thị các vlan lên màn hình
     - name: Show vlan
       ios_command: # Cú pháp để viết lệnh để gửi ở mode command line của switch
