--- a/backup_cau_hinh.yml
+++ b/backup_cau_hinh.yml
@@ -11,16 +11,16 @@
   - name: rename
     copy:
       source: "{{config_output.backup_path}}"
-      dest: "G://Hoc/Devnet/backup.config"
+      dest: "G://Hoc/Devnet/backup/Router.config"
 
   - name: remove non-config lines
     lineinfile:
-      path: "G://Hoc/Devnet/backup.config"
+      path: "G://Hoc/Devnet/backup/Router.config"
       lines: "Building configuration..."
       state: absent
 
   - name: remove non-config lines regex
     lineinfile:
-      path: "G://Hoc/Devnet/backup.config"
+      path: "G://Hoc/Devnet/backup/Router.config"
       regex: 'Current configuration.*'
       state: absent
