--- a/restore_cau_hinh.yml
+++ b/restore_cau_hinh.yml
@@ -3,9 +3,10 @@
   hosts: Router
   gather_facts: no
 
-  - name: Copy running conf to router
-    command: scp G://Hoc/Devnet/backup/Router.config Router:/Router.config
+  tasks:
+    - name: Copy running conf to router
+      command: scp G://Hoc/Devnet/backup/Router.config Router:/Router.config
 
-  - name: Replace force
-    ios_command:
-      commands: config replace flash:Router.config force
+    - name: Replace force
+      ios_command:
+        commands: config replace flash:Router.config force
