--- a/restore_cau_hinh.yml
+++ b/restore_cau_hinh.yml
@@ -4,7 +4,7 @@
   gather_facts: no
 
   tasks:
-    - name: Copy running conf to router
+    - name: Copy running config to router
       command: scp G://Hoc/Devnet/backup/Router.config Router:/Router.config
 
     - name: Replace force
