--- a/backup_cau_hinh.yml
+++ b/backup_cau_hinh.yml
@@ -3,24 +3,25 @@
   hosts: all
   gather_facts: no
 
-  - name: backup conf
-    ios_config:
-      backup: yes
-      register: config_output
+  tasks:
+    - name: backup conf
+      ios_config:
+        backup: yes
+        register: config_output
 
-  - name: rename
-    copy:
-      source: "{{config_output.backup_path}}"
-      dest: "G://Hoc/Devnet/backup/Router.config"
+    - name: rename
+      copy:
+        source: "{{config_output.backup_path}}"
+        dest: "G://Hoc/Devnet/backup/Router.config"
 
-  - name: remove non-config lines
-    lineinfile:
-      path: "G://Hoc/Devnet/backup/Router.config"
-      lines: "Building configuration..."
-      state: absent
+    - name: remove non-config lines
+      lineinfile:
+        path: "G://Hoc/Devnet/backup/Router.config"
+        lines: "Building configuration..."
+        state: absent
 
-  - name: remove non-config lines regex
-    lineinfile:
-      path: "G://Hoc/Devnet/backup/Router.config"
-      regex: 'Current configuration.*'
-      state: absent
+    - name: remove non-config lines regex
+      lineinfile:
+        path: "G://Hoc/Devnet/backup/Router.config"
+        regex: 'Current configuration.*'
+        state: absent
