--- a/backup_cau_hinh.yml
+++ b/backup_cau_hinh.yml
@@ -4,7 +4,7 @@
   gather_facts: no
 
   tasks:
-    - name: backup conf
+    - name: backup config
       ios_config:
         backup: yes
         register: config_output
