--- a/backup_cau_hinh.yml
+++ b/backup_cau_hinh.yml
@@ -11,7 +11,7 @@
 
     - name: rename
       copy:
-        source: "{{config_output.backup_path}}"
+        src: "{{config_output.backup_path}}"
         dest: "G://Hoc/Devnet/backup/Router.config"
 
     - name: remove non-config lines
