--- a/backup_cau_hinh.yml
+++ b/backup_cau_hinh.yml
@@ -17,7 +17,7 @@
     - name: remove non-config lines
       lineinfile:
         path: "./backup/Router.config"
-        lines: "Building configuration..."
+        line: "Building configuration..."
         state: absent
 
     - name: remove non-config lines regex
